[gd_scene load_steps=5 format=3 uid="uid://dcldpre5a6bu0"]

[ext_resource type="PackedScene" uid="uid://dv825sqfrbv4x" path="res://health.tscn" id="1_5dgap"]
[ext_resource type="Script" path="res://temp_enemy.gd" id="1_68xbx"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mfiwl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tsumw"]

[node name="TempEnemy" type="CharacterBody3D"]
script = ExtResource("1_68xbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_mfiwl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_tsumw")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Health" parent="." instance=ExtResource("1_5dgap")]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="on_death" from="Health" to="." method="_on_death"]
